<?xml version="1.0"?>
<package>
  <name>localization_with_simple_ekf</name>
  <version>0.1.0</version>
  <description>localization_with_simple_ekf</description>

  <maintainer email="raul.cruz.benita@alumnos.upm.es">Raúl Cruz Benita</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>behavior_execution_manager</build_depend>
  <build_depend>behavior_execution_manager_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_depend>droneMsgsROS</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pugixml</build_depend>
  <build_depend>lib_cvgutils</build_depend>
  <build_depend>bebop_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>behavior_execution_manager</run_depend>
  <run_depend>behavior_execution_manager_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <run_depend>droneMsgsROS</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pugixml</run_depend>
  <run_depend>lib_cvgutils</run_depend>
  <run_depend>bebop_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/localization_with_simple_ekf.xml" />
  </export>
</package>
